# ai-engineering-course

./: 404.html  CNAME  index.html  index.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/ai-course/module-2/: introduction.ipynb
docs/module-1/: intro-to-transformers.md
docs/module-2/: adv_prompting_techniques.ipynb  introduction.ipynb  prompting_techniques.ipynb  task_based_prompting.ipynb
docs/module-2/advance-prompting-techniques/: function_calling.ipynb  structured_outputs.ipynb
docs/module-3/: articles.json  chunking_strategies.ipynb  health.json  post_retrieval_strategies.ipynb  pre_retrieval_strategies.ipynb  retrieval_strategies.ipynb  sample.html  sample.md  sample.txt
docs/module-3/vector-embeddings/: intro.md  similarity_measures.ipynb  vector_dbs.ipynb
module-1/breakdown-of-transformers/: breakdown-of-transformers.md  index.html
module-1/intro-to-transformers/: index.html
module-1/nlp-before-transformers/: index.html  nlp-before-transformers.md
module-2/advance-prompting-techniques/function_calling/: index.html
module-2/introduction/: index.html
module-2/prompting_techniques/: index.html  prompting_techniques.ipynb
module-2/sample/: index.html
module-3/: articles.json  sample.html
module-3/chunking_strategies/: chunking_strategies.ipynb  index.html
module-3/post_retrieval_strategies/: index.html
module-3/pre_retrieval_strategies/: index.html  pre_retrieval_strategies.ipynb
module-3/retrieval_strategies/: index.html
module-3/sample/: index.html
search/: search_index.json
(+4 files in other folders)
